<resources>
    <string name="app_name">Workruta</string>
    <string name="api_key">AIzaSyAdIaSIsX5Gedq3gQTk46Kny9XEirPQrDk</string>
    <string name="permReq">You need to grant all required permissions to use Workruta\n\n Do you want to grant permission?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="todo">TODO</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="_234">+234</string>
    <string name="_803_1234_567">803 1234 567</string>
    <string name="next">Next</string>
    <string name="verificationCode">Verification Code</string>
    <string name="hyphen">-</string>
    <string name="changePhoneNumber">Change Phone Number</string>
    <string name="Workruta">Workruta</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="male">Male</string>
    <string name="residential_lg">Residential LG</string>
    <string name="residential_town">Residential Town</string>
    <string name="save">Save</string>
    <string name="click_on_the_image_to_change_it">Click On The Image To Change It</string>
    <string name="done">Done</string>
    <string name="_0">0</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="driver_s_licence_infomation">Driver\'s Licence Information</string>
    <string name="licence_number">Licence Number</string>
    <string name="licence_category">Licence Category</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="_private">Private</string>
    <string name="licence_class">Licence Class</string>
    <string name="issued_state">Issued State</string>
    <string name="issued_date">Issued Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="general">General</string>
    <string name="camera_note">You\'ll need to take a picture of your driver\'s licence for proper verification.\n\nWe won\'t share or make it public to anyone.</string>
    <string name="camera_note2">You\'ll need to take a picture of your ID for proper verification.\n\nWe won\'t share or make it public to anyone.</string>
    <string name="car_details">Car Details</string>
    <string name="plate_number">Plate Number</string>
    <string name="car_model">Car Model</string>
    <string name="type_car_product">Type in Car Product</string>
    <string name="select_car_product">Select Car Product</string>
    <string name="car_product">Car Product</string>
    <string name="bank_account_details">Bank Account Details</string>
    <string name="finish">Finish</string>
    <string name="account_number">Account Number</string>
    <string name="_continue">Continue</string>
    <string name="ss">Your Workruta Account have been successfully created</string>
    <string name="phn_vry">A verification code have been sent to your Phone Number. The verification code will expire in</string>
    <string name="_00_00">00:00</string>
    <string name="quit_app">Quit App</string>
    <string name="enable">Enable</string>
    <string name="nnn">You need to turn on your location to use this app</string>
    <string name="fetching_address">Fetching Address…</string>
    <string name="cancel">Cancel</string>
    <string name="quit_text">Do you want to quit this app?</string>
    <string name="logout">Logout</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="logging_out">Logging Out</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="enable_finger">Do You want to enable fingerprint login for this account on this device?</string>
    <string name="disable_finger">Do You want to disable fingerprint login for this account on this device?</string>
    <string name="disable">Disable</string>
    <string name="ok">OK</string>
    <string name="alert_ef">You have to login and enable fingerprint login to use this feature</string>
    <string name="close">Close</string>
    <string name="logging_in">Logging In</string>
    <string name="create_a_ride">Create a Ride</string>
    <string name="view_created_routes">View Created Routes</string>
    <string name="transactions">Transactions</string>
    <string name="payments">Payments</string>
    <string name="history">History</string>
    <string name="support">Support</string>
    <string name="faq">FAQ</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="create">Create</string>
    <string name="discard">Discard</string>
    <string name="discard_text">Are you sure you want to discard this operation?</string>
    <string name="select_date">Select Date and Time</string>
    <string name="address">Address</string>
    <string name="_1">+1</string>
    <string name="_508_712_3456">508 712 3456</string>
    <string name="connection_error_click_to_retry">Connection Error. Click to retry</string>
    <string name="deleteRoute">Delete</string>
    <string name="retry">Retry</string>
    <string name="route_action_text"><![CDATA[Click <b>Retry</b> to create this route or <b>Delete</b> to delete it]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_verification_code_will_the_sent_to_you">A verification code will be sent to you</string>
    <string name="get_code_through_e_mail">Get code through E-mail</string>
    <string name="get_code_through_phone_number">Get code through Phone Number</string>
    <string name="get_code">Get Code</string>
    <string name="create_new_password">Create a New Password</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="code_to_email">A verification code have been sent to your E-mail\nIf you don\'t see it in your inbox check your spam folder</string>
    <string name="code_to_phne">A verification code have been sent to your phone number</string>
    <string name="submit_code">Submit Code</string>
    <string name="your_password_has_been_successfully_changed">Your Password has been successfully changed</string>
    <string name="go_to_login">Go to Login</string>
    <string name="get_code_from_email">Get Code through E-mail</string>
    <string name="get_code_from_phone">Get Code through Phone Number</string>
    <string name="recreate">Recreate</string>
    <string name="recreate_route">Do You want to Recreate this route?</string>
    <string name="created_routes">Created Routes</string>
    <string name="cancel_route">Do You want to cancel this route?</string>
    <string name="ride_history">Ride History</string>
    <string name="edit_route">Edit Route</string>
    <string name="take_ride">Take a Ride</string>
    <string name="about_workruta">About Workruta</string>
    <string name="search">Search</string>
    <string name="searching_for_matching_routes">Searching for matching routes…</string>
    <string name="no_route_created">No Route Created</string>
    <string name="matched_route">Matched Route</string>
    <string name="select_time">Select Time</string>
    <string name="hr">Hr</string>
    <string name="min">Min</string>
    <string name="select">Select</string>
    <string name="follow_ride">Follow Ride</string>
    <string name="unfollow_ride">Unfollow Ride</string>
    <string name="send_message">Send Message</string>
    <string name="view_profile">View Profile</string>
    <string name="edit">Edit</string>
    <string name="personal_info">Personal Information</string>
    <string name="number_of_passengers_allowed">Number of Passengers allowed</string>
    <string name="make_this_ride_free">Make this ride free</string>
    <string name="message">Message…</string>
    <string name="inbox">Inbox</string>
    <string name="inbox_is_empty">Inbox is empty</string>
    <string name="note_is_empty">Notification is empty</string>
    <string name="route_payment">Route Payment</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="click_to_follow_route">Click To Follow Route</string>
    <string name="view_active_routes">View active routes</string>
    <string name="no_active_route">No Active Route</string>
    <string name="active_routes">Active Routes</string>
    <string name="exclude">Exclude</string>
    <string name="exclude_from_route">Do You want to exclude from this ride?</string>
    <string name="notifications">Notifications</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="route_details">Route Details</string>
    <string name="viewOwnRoute">View Own Route</string>
    <string name="makePayment">Make Payment</string>
    <string name="rateRide">Rate This Ride</string>
    <string name="viewUsers">See Users Following This Ride</string>
    <string name="startRide">Start Ride</string>
    <string name="respondToRequest">Respond To Request</string>
    <string name="viewMergedRoute">View Merged Route</string>
    <string name="end_route">End Ride</string>
    <string name="rate">Rate</string>
    <string name="personal_data">Personal Data</string>
    <string name="idExpired">ID Expired</string>
    <string name="idVerified">ID Verified</string>
    <string name="infoAttached">Information Attached</string>
    <string name="pendingVer">Pending Verification</string>
    <string name="notAttached">Not Attached</string>
    <string name="invalidID">Invalid ID</string>
    <string name="identity_card">Identity Card</string>
    <string name="identity_info">Identity Information</string>
    <string name="identity">Identity</string>
    <string name="idNumber">ID Number</string>
</resources>