<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/mainView"
    tools:context=".SignFormAct">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="65dp"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/icon"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Workruta"
                    android:textColor="@color/mainColor"
                    android:textStyle="bold"
                    android:textSize="30sp"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/border_box"
                android:id="@+id/firstNameET"
                android:hint="@string/first_name"
                android:inputType="none"
                android:textSize="17sp"
                android:gravity="center_vertical"
                android:paddingHorizontal="15dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/border_box"
                android:id="@+id/lastNameET"
                android:hint="@string/last_name"
                android:inputType="none"
                android:gravity="center_vertical"
                android:paddingHorizontal="15dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/border_box"
                android:id="@+id/emailET"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="17sp"
                android:gravity="center_vertical"
                android:paddingHorizontal="15dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/border_box"
                android:id="@+id/phoneET"
                android:focusable="false"
                android:hint="@string/phoneNumber"
                android:inputType="number"
                android:textSize="17sp"
                android:gravity="center_vertical"
                android:paddingHorizontal="15dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/border_box"
                android:id="@+id/passwordET"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="17sp"
                android:gravity="center_vertical"
                android:paddingHorizontal="15dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/border_box"
                android:id="@+id/conPassET"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="17sp"
                android:gravity="center_vertical"
                android:paddingHorizontal="15dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/border_box"
                android:id="@+id/addressET"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:textSize="17sp"
                android:gravity="center_vertical"
                android:ellipsize="end"
                android:drawableEnd="@drawable/ic_location_search"
                android:paddingHorizontal="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/gender"
                android:textColor="@color/mainColor"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:buttonTint="@color/mainColor"
                    android:text="@string/female"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:buttonTint="@color/mainColor"
                    android:text="@string/male"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:buttonTint="@color/mainColor"
                    android:text="@string/other"
                    android:textSize="16sp"
                    android:textColor="@color/black" />
            </RadioGroup>


        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mainColor"
        android:text="@string/changePhoneNumber"
        android:textSize="14sp"
        android:padding="5dp"
        android:id="@+id/returnBack"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/signUp"
        android:textSize="20sp"
        android:id="@+id/signUp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/border_box_r_touch"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteFade"
        android:id="@+id/whiteFade"
        android:orientation="vertical"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/blackFade"
        android:visibility="invisible"
        android:gravity="center"
        android:background="@color/blackFade"/>

</RelativeLayout>