<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/mainView"
    tools:context=".SigninAct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/topper"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/icon"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Workruta"
            android:textColor="@color/mainColor"
            android:textStyle="bold"
            android:textSize="30sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:textColor="@color/mainColor"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp"
            android:textSize="20sp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/border_box"
            android:id="@+id/emailET"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="17sp"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/border_box"
            android:id="@+id/passwordET"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mainColor"
        android:text="@string/forgotPass"
        android:textSize="14sp"
        android:padding="5dp"
        android:id="@+id/forgotPass"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/signIn"
        android:textSize="20sp"
        android:id="@+id/signIn"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/border_box_r_touch"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteFade"
        android:id="@+id/whiteFade"
        android:orientation="vertical"
        android:visibility="gone"/>

</RelativeLayout>