<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/mainView"
    tools:context=".CarAct">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        android:textSize="17sp"
        android:text="@string/car_details"
        android:id="@+id/headText"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_arrow_white"
        android:padding="10dp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/border_box"
            android:id="@+id/plateNo"
            android:hint="@string/plate_number"
            android:inputType="none"
            android:textSize="17sp"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_box"
            android:id="@+id/tProduct"
            android:hint="@string/car_product"
            android:inputType="none"
            android:textSize="17sp"
            android:visibility="gone"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"/>

        <Spinner
            android:id="@+id/sProduct"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="30dp"
            android:textAlignment="center"
            android:theme="@style/spinnerTheme"
            android:layout_marginTop="10dp"
            android:popupBackground="@drawable/border_box"
            android:background="@drawable/border_box"
            android:paddingHorizontal="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:id="@+id/toggleCar"
            android:text="@string/type_car_product"
            android:padding="5dp"
            android:textColor="@color/mainColor"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/border_box"
            android:id="@+id/model"
            android:hint="@string/car_model"
            android:inputType="none"
            android:textSize="17sp"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/border_box"
            android:id="@+id/passwordET"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="17sp"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/save"
        android:textSize="20sp"
        android:id="@+id/next"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/border_box_r_touch"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteFade"
        android:id="@+id/whiteFade"
        android:orientation="vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/blackFade"
        android:visibility="invisible"
        android:gravity="center"
        android:background="@color/blackFade"/>

</RelativeLayout>